--- a/packages/mailjet/pubspec.yaml
+++ b/packages/mailjet/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.1.0
 publish_to: none
 
 environment:
-  sdk: ^3.0.0
+  sdk: '>=2.19.6 <4.0.0'
 
 # Add regular dependencies here.
 dependencies:
@@ -17,5 +17,5 @@ dependencies:
       ref: dart2_3
     version: '>=0.5.5'
 dev_dependencies:
-  lints: ^2.0.0
-  test: ^1.21.0
+  lints: '>=2.0.0'
+  test: '>=1.21.0'
