--- a/.github/workflows/run_ci_downgrade_analyze.yml
+++ b/.github/workflows/run_ci_downgrade_analyze.yml
@@ -1,6 +1,7 @@
-name: Run CI
+name: Run CI Downgrade analyze
 on:
   push:
+  pull_request:
   workflow_dispatch:
   schedule:
     - cron: '0 0 * * 0'  # every sunday at midnight
@@ -15,8 +16,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        dart: [3.0.5, stable, beta, dev]
+        os: [ubuntu-latest]
+        dart: [stable]
     steps:
       - uses: actions/checkout@v4
       - uses: dart-lang/setup-dart@v1.4
@@ -24,4 +25,4 @@ jobs:
           sdk: ${{ matrix.dart }}
       - run: dart --version
       - run: dart pub global activate dev_test
-      - run: dart pub global run dev_test:run_ci
+      - run: dart pub global run dev_test:run_ci --pub-downgrade --analyze --no-override --recursive
