--- a/packages/deezer/pubspec.yaml
+++ b/packages/deezer/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.1.3
 publish_to: none
 
 environment:
-  sdk: ^3.1.0
+  sdk: '>=3.4.0-0 <4.0.0'
 
 # Add regular dependencies here.
 dependencies:
@@ -17,6 +17,7 @@ dependencies:
     version: '>=0.1.0'
   cv: '>=0.2.14'
   http:
+  web: '>=0.5.1'
 dev_dependencies:
   lints: '>=2.0.0'
   test: '>=1.21.0'
