--- a/.github/workflows/run_ci.yml
+++ b/.github/workflows/run_ci.yml
@@ -32,5 +32,5 @@ jobs:
         with:
           sdk: ${{ matrix.dart }}
       - run: dart --version
-      - run: dart pub global activate dev_test
-      - run: dart pub global run dev_test:run_ci
+      - run: dart pub global activate dev_build
+      - run: dart pub global run dev_build:run_ci
