--- a/packages/deezer/pubspec.yaml
+++ b/packages/deezer/pubspec.yaml
@@ -8,16 +8,17 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
-  path: '>=1.8.0'
+  path: ">=1.9.0"
   tekartik_app_http:
     git:
       url: https://github.com/tekartik/app_common_utils.dart
       ref: dart3a
       path: app_http
     version: '>=0.1.0'
-  cv: '>=0.2.14'
+  cv: ">=1.1.0+4"
   http:
   web: '>=0.5.1'
 dev_dependencies:
-  lints: '>=2.0.0'
-  test: '>=1.21.0'
+  lints: ">=5.0.0"
+  test: ">=1.24.0"
+resolution: workspace
