--- a/packages/mailjet/pubspec.yaml
+++ b/packages/mailjet/pubspec.yaml
@@ -8,8 +8,8 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
-  cv: '>=0.2.14'
-  path:
+  cv: ">=1.1.0+4"
+  path: ">=1.9.0"
   tekartik_http:
     git:
       url: https://github.com/tekartik/http.dart
@@ -18,4 +18,5 @@ dependencies:
     version: '>=0.5.5'
 dev_dependencies:
   lints: '>=5.0.0'
-  test: '>=1.21.0'
+  test: ">=1.24.0"
+resolution: workspace
