--- a/packages/stripe/pubspec.yaml
+++ b/packages/stripe/pubspec.yaml
@@ -8,7 +8,7 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
-  path: ^1.8.0
+  path: ">=1.9.0"
   http:
   tekartik_http:
     git:
@@ -16,8 +16,9 @@ dependencies:
       path: http
       ref: dart3a
     version: '>=0.7.5'
-  process_run:
-  cv: '>=0.2.18+1'
+  process_run: ">=1.2.1+1"
+  cv: ">=1.1.0+4"
 dev_dependencies:
-  lints: ^2.0.0
-  test: ^1.21.0
+  lints: ">=5.0.0"
+  test: ">=1.24.0"
+resolution: workspace
